# lore

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pytest.ini  server.json  sh.exe.stackdump  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.learnings/: 2026-07-13-supersession-build.md  2026-07-20-recall-ceiling-analysis.md
.pgdata/: postmaster.pid
api/: package-lock.json  package.json  server.js
core/: build_backend.sh  build_backend_mac.sh  pyproject.toml  run.md  run_server.py
core/lore/: api.py  auth.py  autofile.py  chunker.py  classify.py  cli.py  config.py  connectors.py  contextualize.py  db.py  distill.py  doctor.py  embed.py  extract.py  index.py  learn.py  llm.py  llm_providers.py  llm_relations.py  mailer.py  mcp_server.py  models.py  observations.py  ocr.py  okta.py  people.py  personal_memory.py  qdrant_store.py  recall.py  redact.py  relations.py  rerank.py  sections.py  sessions.py  sqlutil.py  supersede.py  tenancy.py  todos.py  topic_merge.py  upkeep.py  (+1 more)
core/lore/static/: app.html
core/scripts/: scrub_store.py
core/tests/: conftest.py  test_api.py  test_ask_history.py  test_auth.py  test_body_roundtrip.py  test_capture.py  test_ceiling_fills.py  test_chunker.py  test_classify_query.py  test_config_retrieval.py  test_connectors.py  test_contextualize.py  test_created_at.py  test_db.py  test_db_sqlite.py  test_digest.py  test_doctor.py  test_dump_onboarding.py  test_edge_logic.py  test_extract.py  test_folded_tombstones.py  test_forget.py  test_hygiene.py  test_index_recall_e2e.py  test_ingest_and_graph.py  test_learn_api.py  test_learn_cli.py  test_learn_cross_session_e2e.py  test_learn_eligibility.py  test_learn_evidence.py  test_learn_review.py  test_learn_schema.py  test_learn_skills.py  test_llm_providers.py  test_llm_relations.py  test_local_recall_smoke.py  test_mailer.py  test_mcp_env_defaults.py  test_mcp_progressive_disclosure.py  test_memory_bus.py  (+25 more)
core/vault/: api.py  chunker.py  distill.py  embed.py  fusion.py  index.py  qdrant_store.py  recall.py  rerank.py  watcher.py
core/vault/static/: app.html
core/vault_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
desktop/: .gitignore  cli-installer.js  e2e-actions.js  e2e-backend-log.js  e2e-buttons.js  e2e-functional.js  e2e-graph-probe.js  e2e-lag-probe.js  e2e-map-filter-fix.js  e2e-map-fix.js  e2e-new.js  e2e-reindex-probe.js  e2e-scrape-debug.js  e2e-section-switch.js  e2e-smoke.js  e2e-trusted-recall.js  e2e-visual-redesign.js  eslint.config.js  hooks-installer.js  main.js  mcp-installer.js  package-lock.json  package.json  preload.js  scraper.js  test-cli-installer.js  test-codex-install.js  test-codex-toml.js  test-hooks-installer.js  test-mcp-installer.js  (+2 more)
(+244 files in other folders)
