[project]
name = "lore-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi","uvicorn","qdrant-client","voyageai","psycopg[binary]",
  "watchdog","markdown-it-py","tiktoken","python-dotenv","pydantic","mcp<2",
  "pyjwt","google-auth"
]
[project.scripts]
lore = "lore.cli:main"
lore-mcp = "lore.mcp_server:main"

[project.optional-dependencies]
dev = ["pytest","httpx"]
local = ["fastembed"]   # offline semantic embeddings + cross-encoder rerank (no API key)
